--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,10 +3,13 @@
 @tailwind utilities;
 
 html,
-body {
+body,
+#__next {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell,
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
